Implementation for task 1 and start of task 2

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>DATA2410</title>
 </head>
 <body>
-$END$
+    <h1>DATA2410 Oblig 1</h1>
+    <h2>Develop and test a web server</h2>
+    <h3 style="color: red">Congratulations - your HTTP request was successful!</h3>
 </body>
 </html>
